--- a/17_Final_Project/app/src/main/res/drawable/gradient.xml
+++ b/17_Final_Project/app/src/main/res/drawable/gradient.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#8A8A8A"
-        android:centerColor="#4D4D4D"
+        android:startColor="#4D4D4D"
+        android:centerColor="#000000"
         android:endColor="#000000"
         android:type="linear"
         android:angle="90" />
