--- a/17_Final_Project/app/src/main/res/layout/activity_main.xml
+++ b/17_Final_Project/app/src/main/res/layout/activity_main.xml
@@ -18,56 +18,67 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
+            <TextView
+                android:id="@+id/details_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:text="TextDetail"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginVertical="10dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textLatitude"
-                    android:textColor="@color/white"
-                    android:layout_width="match_parent"
+                    android:id="@+id/weather_icon"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginVertical="10dp"
-                    android:text="Latitude"
-                    android:textSize="10pt" />
+                    android:text="Icon"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="120dp" />
 
                 <TextView
-                    android:id="@+id/textLongtitude"
-                    android:textColor="@color/white"
-                    android:layout_width="match_parent"
+                    android:id="@+id/textTemp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top"
                     android:layout_weight="1"
-                    android:layout_marginVertical="10dp"
-                    android:textSize="10pt"
-                    android:text="Longtitude" />
+                    android:text="Temp"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="12pt" />
+
             </LinearLayout>
 
             <LinearLayout
+                android:layout_marginVertical="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textViewLatitude"
+                    android:id="@+id/textCity"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="CurrentLatitude"
+                    android:text="City"
+                    android:textAlignment="center"
                     android:textColor="@color/white"
-                    android:textSize="10pt" />
+                    android:textSize="25dp" />
 
-                <TextView
-                    android:id="@+id/textViewLongitude"
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/refreshButton"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
                     android:layout_weight="1"
-                    android:text="CurrentLongtitude"
-                    android:textColor="@color/white"
-                    android:textSize="10pt" />
+                    android:text="Refresh" />
             </LinearLayout>
 
             <LinearLayout
@@ -75,26 +86,6 @@
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
                 android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textCity"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
-                    android:text="City"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:id="@+id/textTemp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
-                    android:text="Temp"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
 
                 <!--<TextView-->
                 <!--android:id="@+id/textSunrise"-->
@@ -134,16 +125,6 @@
                 <!--android:textSize="20dp"/>-->
 
                 <TextView
-                    android:id="@+id/details_field"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
-                    android:text="TextDetail"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
-
-                <TextView
                     android:id="@+id/textViewUpdated"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -153,16 +134,60 @@
                     android:textColor="@color/white"
                     android:textSize="20dp" />
 
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
                 <TextView
-                    android:id="@+id/weather_icon"
-                    android:layout_marginVertical="20dp"
+                    android:id="@+id/textLatitude"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:textSize="100dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_weight="1"
+                    android:text="Latitude"
                     android:textColor="@color/white"
-                    android:text="Icon" />
+                    android:textSize="10pt" />
 
+                <TextView
+                    android:id="@+id/textLongtitude"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="10dp"
+                    android:layout_weight="1"
+                    android:text="Longtitude"
+                    android:textColor="@color/white"
+                    android:textSize="10pt" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewLatitude"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="10dp"
+                    android:layout_weight="1"
+                    android:text="CurrentLatitude"
+                    android:textColor="@color/white"
+                    android:textSize="8pt" />
+
+                <TextView
+                    android:id="@+id/textViewLongitude"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="10dp"
+                    android:layout_weight="1"
+                    android:text="CurrentLongtitude"
+                    android:textColor="@color/white"
+                    android:textSize="8pt" />
             </LinearLayout>
 
         </LinearLayout>
